--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -391,7 +391,7 @@ min-height: 100vh;
 
 #hero:before {
   content: "";
-  background: rgba(5, 13, 24, 0.3);
+  background: rgba(5, 13, 24,0.1);
   position: absolute;
   bottom: 0;
   top: 0;
