--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -385,13 +385,13 @@ min-height: 100vh;
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/hero-bg.jpg") top center;
+  background: url("../img/hero-bg.png") top center;
   background-size: cover;
 }
 
 #hero:before {
   content: "";
- background:rgb(0,0,0,0.05);
+  background:rgb(0,0,0,0.5);
   position: absolute;
   bottom: 0;
   top: 0;
@@ -477,7 +477,7 @@ min-height: 100vh;
 
 #intro .carousel-item::before {
   content: '';
-  background:rgb(0,0,0,0.05);
+  background:rgb(0,0,0,0.1);
 }
 
 #intro .carousel-container {
