--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -385,7 +385,7 @@ min-height: 100vh;
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/hero-bg.PNG") top center;
+  background: url("../img/Hero-bg.PNG") top center;
   background-size: cover;
 }
 
