--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -379,13 +379,17 @@ min-height: 100vh;
   color: #fff;
 }
 
+
 /*--------------------------------------------------------------
 # Hero Section
 --------------------------------------------------------------*/
+.jumbotron{
+background: url("../img/jumb.JPEG") center rgb(0,0,0,0.5) ;
+}
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/Hero-bg.PNG") top center;
+  
   background-size: cover;
 }
 
