--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -396,6 +396,7 @@ background: url("../img/jumb.JPEG") center rgb(0,0,0,0.5) ;
 #hero:before {
   content: "";
   background:rgb(0,0,0,0.5);
+  height: 100vh;
   position: absolute;
   bottom: 0;
   top: 0;
