--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -384,7 +384,7 @@ min-height: 100vh;
 # Hero Section
 --------------------------------------------------------------*/
 .jumbotron{
-background: url("../img/jumb.JPEG") center rgb(0,0,0,0.5) ;
+background: url("../img/bg4.JPG") center rgb(0,0,0,0.5) ;
 }
 #hero {
   width: 100%;
