--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1590,13 +1590,24 @@ section {
   font-size: 13px;
   color: #ddd;
 }
-@media (min-width: 950px){
-  #spaceleft{
-    margin-left: 100px;
+@media only screen and (max-width: 420px){
+  #imgtop{
+    height: 120px;
+    background-size: auto 140px;
+
   }
 }
-@media (min-width: 1100px){
-  #spaceleft{
-    margin-left: 200px;
+@media only screen and (min-width: 421px){
+  #imgtop{
+    height: 220px;
+  }
+}
+@media (min-width: 1050px){
+  #car{
+    width: 700px;
+    align-content: center;
+    margin-left: auto;
+    margin-right: auto;
+    height: auto;
   }
 }
