--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1613,4 +1613,20 @@ section {
 }
 #borderimg {
 	border : 4px solid black;
+  border-radius: 10px;
+}
+#carousel2{
+  background-color: black;
+  height: 20px;
+  width: 20px;
+  margin-left: 30%;
+  border-radius: 5px;
+}
+
+#carousel1{
+  background-color: black;
+  height: 20px;
+  width: 20px;
+  margin-right: 30%;
+  border-radius: 5px;
 }
