--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1611,8 +1611,10 @@ section {
     height: auto;
   }
 }
-
-}
+/*#borderimg {
+	border : 4px solid black;
+  border-radius: 10px;
+}*/
 #carousel2{
   background-color: black;
   height: 20px;
