--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1613,6 +1613,23 @@ section {
     height: 220px;
   }
 }
+@media(max-width: 550px){
+  .diwalivideo{
+    width: 100%;
+    margin-top: 10px;
+  }
+}
+@media(min-width: 551px){
+  .diwalivideo{
+    width: 500px;
+    margin-left: 18%;
+  }
+}
+@media(min-width: 950px){
+  .diwalivideo{
+    margin-left: 30%;
+  }
+}
 @media (min-width: 1050px){
   #car{
     width: 700px;
