--- a/templates/home.html
+++ b/templates/home.html
@@ -5,8 +5,8 @@
     <title>home</title>
 </head>
 <body>
-<a href="register" >click here</a>
+<a href="register.html" >click here</a>
 <br>
-<a href="members">list...,</a>
+<a href="members.html">list...,</a>
 </body>
 </html>
