--- a/templates/paymentgateway.html
+++ b/templates/paymentgateway.html
@@ -61,11 +61,12 @@ h1 {
 }
 </style>
 <body>
+  
 <div class="bg"></div>
 <div class="bg bg2"></div>
 <div class="bg bg3"></div>
 <div class="content">
-  <h1>click on reister to pay</h1>
+  <h1>click here to pay</h1>
     <form><script src="https://checkout.razorpay.com/v1/payment-button.js" data-payment_button_id="pl_H2IPRkoncn55PA" async> </script> </form>
 </div>
 
