--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,9 @@ body {
   color: #666666;
   font-family: "Open Sans", sans-serif;
 }
-
+.registeriot:hover{
+color: black;
+}
 a {
   color: #18d26e;
   transition: 0.5s;
